# ascii-motion

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
ascii_motion/: __init__.py  benchmark.py  charsets.py  frame_processor.py  keyboard.py  main.py  stream_manager.py  terminal_renderer.py
scripts/: generate_demo_gif.py
site/: index.html  script.js  styles.css
tests/: test_frame_processor.py  test_keyboard.py  test_main.py  test_stream_manager.py  test_terminal_renderer.py
