[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii-motion"
version = "0.1.0"
description = "Reproduce videos como animaciones ASCII en terminales ANSI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
ascii-motion = "ascii_motion.main:main"

[tool.setuptools.packages.find]
include = ["ascii_motion*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
