[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii-motion"
version = "0.1.1"
description = "Reproduce videos como animaciones ASCII en terminales ANSI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Carlos Andres Huete" },
]
keywords = ["ascii", "terminal", "opencv", "video", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Terminals",
]
dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/c4rl0s04/ascii-motion"
Repository = "https://github.com/c4rl0s04/ascii-motion"
Issues = "https://github.com/c4rl0s04/ascii-motion/issues"
Landing = "https://c4rl0s04.github.io/ascii-motion/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
ascii-motion = "ascii_motion.main:main"

[tool.setuptools.packages.find]
include = ["ascii_motion*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
